# stems

./: .claudeignore  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  watch.sh
.github/workflows/: release.yml
docs/: IMPLEMENTATION_COMPLETE.md  MODEL_LIMITATIONS.md  ROADMAP.md  SESSION_SUMMARY.md  SIGNAL_PROCESSING.md  STATUS.md
include/: audio_validator.h  audio_writer.h  constants.h  onnx_model.h  stem_processor.h  stft.h
models/: README.md
scripts/: convert-demucs-dynamic.py  download_model.sh
src/: audio_validator.cxx  audio_writer.cxx  main.cxx  onnx_model.cxx  stem_processor.cxx  stft.cxx
